# BuildSystems-fall-2020

./: .gitmodules  README.md
A/: CMakeLists.txt
B/: lib.cpp  lib.h
C/: CMakeLists.txt  main.cpp
HOR/PatternsCollection-master/: README.md
UD/: CMakeLists.txt
UD/A/: CMakeLists.txt  preparing.py
UD/B/: CMakeLists.txt
UD/C/: CMakeLists.txt  DownloadProject.cmake  main.h  main_test.cpp  test.cpp
